fix. overflow

--- a/packages/agora-scenario-ui-kit/src/styles/global.css
+++ b/packages/agora-scenario-ui-kit/src/styles/global.css
@@ -37,4 +37,5 @@
     height: 100%;
     width: 100%;
     z-index: 1;
+    overflow: hidden;
 }
